# objectiveai

.github/workflows/: rust.yml
coding-agent-scratch/: capture-jsonl.ts  claude_sdk_1771918738220.jsonl  claude_sdk_1771918738220_request.json  claude_sdk_1771923330381.jsonl  claude_sdk_1771923330381_response.json  claude_sdk_1771924018448.jsonl  claude_sdk_1771924018448_response.json
objectiveai-api/: Cargo.toml
objectiveai-api/src/: main.rs
objectiveai-api/src/chat/completions/: client.rs
objectiveai-api/src/chat/completions/upstream/: client.rs  error.rs  mod.rs  params.rs  upstream.rs
objectiveai-api/src/chat/completions/upstream/claude_agent_sdk/: client.rs  client_tests.rs  content_block.rs  convert.rs  error.rs  event.rs  js.rs  mod.rs  sdk_message.rs
objectiveai-api/src/chat/completions/upstream/claude_agent_sdk/response/: event.rs  mod.rs  usage.rs
objectiveai-api/src/chat/completions/upstream/openrouter/response/: chat_completion_chunk.rs
objectiveai-api/src/ctx/: ctx.rs  ctx_ext.rs  default_ctx_ext.rs
objectiveai-api/src/functions/: client.rs  flat_task_profile.rs  mod.rs
objectiveai-api/src/functions/executions/: client.rs  client_tests.rs
objectiveai-api/src/functions/function_fetcher/: fetcher.rs  router.rs
objectiveai-api/src/functions/function_fetcher/filesystem/: fetcher.rs
objectiveai-api/src/functions/function_fetcher/github/: github.rs  mod.rs  objectiveai.rs
objectiveai-api/src/functions/github/: client.rs  error.rs
objectiveai-api/src/functions/profile_fetcher/: fetcher.rs  router.rs
objectiveai-api/src/functions/profile_fetcher/filesystem/: fetcher.rs
objectiveai-api/src/functions/profile_fetcher/github/: github.rs  mod.rs  objectiveai.rs
objectiveai-api/src/functions/profiles/: client.rs
objectiveai-api/src/vector/completions/: client.rs
objectiveai-js/src/: json_schema.ts
objectiveai-web/app/: page.tsx
objectiveai-web/lib/: profiles.ts
(+36 files in other folders)
