[package]
name = "objectiveai-api"
version = "0.1.5"
edition = "2024"
authors = ["ObjectiveAI <admin@objective-ai.io>"]
description = "ObjectiveAI API Server"
license = "MIT"
repository = "https://github.com/ObjectiveAI/objectiveai"
homepage = "https://objective-ai.io"
documentation = "https://docs.rs/objectiveai-api"
readme = "README.md"
keywords = ["llm", "ai", "ensemble"]
publish = true

[dependencies]
objectiveai = { path = "../objectiveai-rs", version = "0.1.5" }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
indexmap = { version = "2.2.3", features = ["serde"] }
json-escape = { version = "0.3.1" }
rust_decimal = { version = "1.39.0", features = ["macros", "serde-float", "rand", "maths"] }
thiserror = {  version = "2.0.12" }
serde_path_to_error = { version = "0.1.17" }
reqwest = { version = "0.12.15", default-features = false, features = ["charset", "http2", "rustls-tls", "json"] }
reqwest-eventsource = { version = "0.6.0" }
eventsource-stream = { version = "0.2.3" }
futures = { version = "0.3.31" }
dashmap = { version = "6.1.0" }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
async-stream = { version = "0.3.6" }
async-trait = { version = "0.1.88" }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "sync"] }
backoff = { version = "0.4.0", features = ["tokio"] }
rand = { version = "0.9.2" }
regex = { version = "1.11.1" }
tokio-stream = { version = "0.1.17" }
either = { version = "1.15.0" }
ahash = { version = "0.8.12" }
envconfig = { version = "0.11.0" }
dotenv = { version = "0.15.0" }
axum = { version = "0.8.4" }
tower-http = { version = "0.6.4", features = ["cors"] }
git2 = { version = "0.20.4", default-features = false, features = ["vendored-libgit2"] }
dirs = "6.0.0"
